--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/authors.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/authors.inc.jspx
@@ -1,24 +1,24 @@
 <!--
-docs-taglib - Reusable Java taglib for documentation management.
+semanticcms-theme-documentation - SemanticCMS theme tailored for technical documentation.
 Copyright (C) 2016  AO Industries, Inc.
 	support@aoindustries.com
 	7262 Bull Pen Cir
 	Mobile, AL 36695
 
-This file is part of docs-taglib.
+This file is part of semanticcms-theme-documentation.
 
-docs-taglib is free software: you can redistribute it and/or modify
+semanticcms-theme-documentation is free software: you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
-docs-taglib is distributed in the hope that it will be useful,
+semanticcms-theme-documentation is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Lesser General Public License for more details.
 
 You should have received a copy of the GNU Lesser General Public License
-along with docs-taglib.  If not, see <http://www.gnu.org/licenses/>.
+along with semanticcms-theme-documentation.  If not, see <http://www.gnu.org/licenses/>.
 -->
 
 <!--
