--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
@@ -49,14 +49,14 @@ Arguments:
 			<ao:meta name="apple-mobile-web-app-capable" content="yes" />
 			<ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
 			<!-- Authors -->
-			<ao:include page="/semanticcms-theme-documentation/copyright.inc.jspx" arg.copyright="${book.copyright}" />
-			<ao:include page="/semanticcms-theme-documentation/authors.inc.jspx" arg.authors="${book.authors}" />
+			<ao:include page="copyright.inc.jspx" arg.copyright="${book.copyright}" />
+			<ao:include page="authors.inc.jspx" arg.authors="${book.authors}" />
 			<title>Navigation - <ao:out value="${book.title}" /></title>
 			<jsp:text>&lt;!--[if lt IE 9]&gt;</jsp:text>
 				<ao:script src="/lib/html5.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
 			<ao:link href="/styles/html5.css" rel="stylesheet" type="text/css" />
-			<ao:include page="/lib/yui-2.9.0/head.inc.jsp" />
+			<ao:include page="jslib/yui-2.9.0/head.inc.jspx" />
 			<ao:link href="/styles/navigation.css" rel="stylesheet" type="text/css" />
 			<ao:script src="navigation.js" />
 			<ao:script src="/lib/jquery-1.10.2.min.js" />
