--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -72,7 +72,7 @@ Arguments:
 				<ao:meta name="keywords" content="${keywords}" />
 			</c:if>
 			<jsp:text>&lt;!--[if lt IE 9]&gt;</jsp:text>
-				<ao:script src="/lib/html5.js" />
+				<ao:script src="/webjars/html5shiv/3.7.3/html5shiv.min.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
 			<ao:link href="/styles/html5.css" rel="stylesheet" type="text/css" />
 			<ao:link href="/styles/page.css" rel="stylesheet" type="text/css" />
