--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -95,7 +95,7 @@ Arguments:
 				</c:otherwise>
 			</c:choose>
 			<jsp:text>&lt;!--[if lt IE 9]&gt;</jsp:text>
-				<ao:script src="/lib/html5.js" />
+				<ao:script src="/webjars/html5shiv/3.7.3/html5shiv.min.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
 			<ao:link href="/styles/html5.css" rel="stylesheet" type="text/css" />
 			<ao:link href="/styles/page.css" rel="stylesheet" type="text/css" />
