Top area converted to jspx.

--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -107,7 +107,7 @@ Arguments:
 			<div id="pageContainer">
 				<c:if test="${!empty book}">
 					<ao:include
-						page="/lib/docs/page-top-area.inc.jsp"
+						page="/lib/docs/page-top-area.inc.jspx"
 						arg.book="${book}"
 						arg.path="${contentRoot}"
 						arg.view="${contentRoot}"
