--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -92,7 +92,7 @@ Arguments:
 		<body>
 			<div id="pageContainer">
 				<ao:include
-					page="/lib/docs/page-top-area.inc.jsp"
+					page="/lib/docs/page-top-area.inc.jspx"
 					arg.book="${pageRef.book}"
 					arg.path="${pageRef.path}"
 					arg.view="${view.isDefault() ? pageRef.path : pageRef.path.concat('?view=').concat(p:encodeUrlParam(view.name))}"
