--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/navigation.inc.jspx
@@ -79,54 +79,30 @@ Arguments:
 				</c:if>
 
 				<c:set var="views" value="${applicationScope.semanticCMS.views}" />
-
-				<!-- FIXED views -->
-				<c:set var="hasApplicableView" value="false" />
-				<c:forEach var="view" items="${views}">
-					<c:if test="${!hasApplicableView and view.group=='FIXED' and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
-						<c:set var="hasApplicableView" value="true" />
+				<c:forEach var="viewGroup" items="${applicationScope.semanticCMS.viewGroups}">
+					<c:set var="hasApplicableView" value="false" />
+					<c:forEach var="view" items="${views}">
+						<c:if test="${!hasApplicableView and view.group==viewGroup and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
+							<c:set var="hasApplicableView" value="true" />
+						</c:if>
+					</c:forEach>
+					<c:if test="${hasApplicableView}">
+						<div class="semanticcms-theme-documentation-navigation-views">
+							<ul>
+								<c:forEach var="view" items="${views}">
+									<c:if test="${view.group==viewGroup and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
+										<!-- Note: entire frame is nofollow -->
+										<li><ao:a
+											target="contentFrame"
+											href="${servletPath}"
+											param.view="${view.isDefault() ? null : view.name}"
+										><ao:out value="${view}" /></ao:a></li>
+									</c:if>
+								</c:forEach>
+							</ul>
+						</div>
 					</c:if>
 				</c:forEach>
-				<c:if test="${hasApplicableView}">
-					<div id="navigationSpecialPages">
-						<ul>
-							<c:forEach var="view" items="${views}">
-								<c:if test="${view.group=='FIXED' and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
-									<!-- Note: entire frame is nofollow -->
-									<li><ao:a
-										target="contentFrame"
-										href="${servletPath}"
-										param.view="${view.isDefault() ? null : view.name}"
-									><ao:out value="${view}" /></ao:a></li>
-								</c:if>
-							</c:forEach>
-						</ul>
-					</div>
-				</c:if>
-
-				<!-- VARIABLE views -->
-				<c:set var="hasApplicableView" value="false" />
-				<c:forEach var="view" items="${views}">
-					<c:if test="${!hasApplicableView and view.group=='VARIABLE' and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
-						<c:set var="hasApplicableView" value="true" />
-					</c:if>
-				</c:forEach>
-				<c:if test="${hasApplicableView}">
-					<div id="navigationElementTypes">
-						<ul>
-							<c:forEach var="view" items="${views}">
-								<c:if test="${view.group=='VARIABLE' and view.appliesGlobally and p:isViewApplicable(view, contentRoot)}">
-									<!-- Note: entire frame is nofollow -->
-									<li><ao:a
-										target="contentFrame"
-										href="${servletPath}"
-										param.view="${view.isDefault() ? null : view.name}"
-									><ao:out value="${view}" /></ao:a></li>
-								</c:if>
-							</c:forEach>
-						</ul>
-					</div>
-				</c:if>
 
 				<!-- Capture all pages recursively without headers (for fast traversal) -->
 				<nav id="navigationTree" class="ygtv-highlight">
