--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
@@ -52,7 +52,7 @@ Arguments:
 			<ao:include page="copyright.inc.jspx" arg.copyright="${book.copyright}" />
 			<ao:include page="authors.inc.jspx" arg.authors="${book.authors}" />
 			<title><!--Frames - --><ao:out value="${book.title}" /></title>
-			<ao:link href="/styles/frameset.css" rel="stylesheet" type="text/css" />
+			<ao:link href="styles/frameset.css" rel="stylesheet" type="text/css" />
 			<!-- No search index framesets -->
 			<ao:meta name="robots" content="noindex, nofollow" />
 		</head>
