--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -77,6 +77,11 @@ Arguments:
 			<ao:link href="styles/html5.css" rel="stylesheet" type="text/css" />
 			<ao:link href="/styles/page.css" rel="stylesheet" type="text/css" />
 			<ao:link href="/styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
+			<!-- Application-wide CSS -->
+			<c:forEach var="cssLink" items="${applicationScope.semanticCMS.cssLinks}">
+				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
+			</c:forEach>
+			<!-- Per-view CSS -->
 			<c:forEach var="cssLink" items="${view.cssLinks}">
 				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
 			</c:forEach>
