--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -88,7 +88,10 @@ Arguments:
 			<ao:script src="/webjars/jquery/2.2.4/jquery.min.js" />
 			<ao:script src="/webjars/d3js/3.5.17/d3.min.js" />
 			<ao:script src="/webjars/dagre-d3/0.4.10/dagre-d3.min.js" />
-			<ao:include page="/lib/docs/head.inc.jsp" />
+			<!-- Application-wide head includes -->
+			<c:forEach var="headInclude" items="${applicationScope.semanticCMS.headIncludes}">
+				<ao:include page="${headInclude}" />
+			</c:forEach>
 			<ao:include page="update-nav.inc.jspx" arg.page="${page}" />
 			<c:if test="${!view.getAllowRobots(page)}">
 				<ao:meta name="robots" content="noindex, nofollow" />
