Added global and per-view script registry.

--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -85,7 +85,11 @@ Arguments:
 			<c:forEach var="cssLink" items="${view.cssLinks}">
 				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
 			</c:forEach>
-			<ao:script src="/webjars/jquery/2.2.4/jquery.min.js" />
+			<!-- Application-wide scripts merged with view-specific scripts -->
+			<c:forEach var="script" items="${p:mergeGlobalAndViewScripts(view)}">
+				<ao:script src="${script.value}" />
+			</c:forEach>
+			<!-- TODO: Move to new page-graph package -->
 			<ao:script src="/webjars/d3js/3.5.17/d3.min.js" />
 			<ao:script src="/webjars/dagre-d3/0.4.10/dagre-d3.min.js" />
 			<!-- Application-wide head includes -->
