Moving page styles from docs-taglib to theme.

--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -113,7 +113,11 @@ Arguments:
 				<ao:script src="/webjars/html5shiv/3.7.3/html5shiv.min.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
 			<ao:link href="styles/html5.css" rel="stylesheet" type="text/css" />
+			<ao:link href="styles/page.css" rel="stylesheet" type="text/css" />
+			<!-- TODO: Remove this once all out of docs-taglib -->
 			<ao:link href="/styles/page.css" rel="stylesheet" type="text/css" />
+			<ao:link href="styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
+			<!-- TODO: Remove this once all out of docs-taglib -->
 			<ao:link href="/styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
 			<ao:script src="/webjars/jquery/2.2.4/jquery.min.js" />
 			<!-- Application-wide head includes -->
@@ -137,6 +141,7 @@ Arguments:
 						An error has occurred in processing your request.
 					</p>
 					<c:if test="${isDev}">
+						<!-- TODO: Is thinTable a SemanticCMS class? -->
 						<table class="thinTable">
 							<tbody>
 								<tr>
