--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -75,7 +75,11 @@ Arguments:
 				<ao:script src="/webjars/html5shiv/3.7.3/html5shiv.min.js" />
 			<jsp:text>&lt;![endif]--&gt;</jsp:text>
 			<ao:link href="styles/html5.css" rel="stylesheet" type="text/css" />
+			<ao:link href="styles/page.css" rel="stylesheet" type="text/css" />
+			<!-- TODO: Remove this once all out of docs-taglib -->
 			<ao:link href="/styles/page.css" rel="stylesheet" type="text/css" />
+			<ao:link href="styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
+			<!-- TODO: Remove this once all out of docs-taglib -->
 			<ao:link href="/styles/page-print.css" media="print" rel="stylesheet" type="text/css" />
 			<!-- Application-wide CSS -->
 			<c:forEach var="cssLink" items="${applicationScope.semanticCMS.cssLinks}">
