--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/frameset.inc.jspx
@@ -49,8 +49,8 @@ Arguments:
 			<ao:meta name="apple-mobile-web-app-capable" content="yes" />
 			<ao:meta name="apple-mobile-web-app-status-bar-style" content="black" />
 			<!-- Authors -->
-			<ao:include page="copyright.inc.jspx" arg.copyright="${book.copyright}" />
-			<ao:include page="authors.inc.jspx" arg.authors="${book.authors}" />
+			<ao:include page="/semanticcms-core-theme-base/copyright.inc.jspx" arg.copyright="${book.copyright}" />
+			<ao:include page="/semanticcms-core-theme-base/authors.inc.jspx" arg.authors="${book.authors}" />
 			<title><!--Frames - --><ao:out value="${book.title}" /></title>
 			<ao:link href="styles/frameset.css" rel="stylesheet" type="text/css" />
 			<!-- No search index framesets -->
