Avoid self-closing tag in jspx

--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/error.inc.jspx
@@ -180,7 +180,7 @@ Arguments:
 							</tbody>
 						</table>
 					</c:if>
-					<div id="pagePadBottom"></div>
+					<div id="pagePadBottom"><!-- Avoid self-closing tag in jspx --></div>
 				</main>
 			</div>
 		</body>
