--- a/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
+++ b/src/main/resources/META-INF/resources/semanticcms-theme-documentation/theme.inc.jspx
@@ -85,9 +85,9 @@ Arguments:
 			<c:forEach var="cssLink" items="${applicationScope.semanticCMS.cssLinks}">
 				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
 			</c:forEach>
-			<!-- Per-view CSS -->
-			<c:forEach var="cssLink" items="${view.cssLinks}">
-				<ao:link href="${cssLink}" rel="stylesheet" type="text/css" />
+			<!-- Per-view links -->
+			<c:forEach var="link" items="${p:getViewLinks(view, page)}">
+				<ao:link link="${link}" />
 			</c:forEach>
 			<!-- Application-wide scripts merged with view-specific scripts -->
 			<c:forEach var="script" items="${p:mergeGlobalAndViewScripts(view)}">
